--- a/src/output.css
+++ b/src/output.css
@@ -594,24 +594,8 @@ video {
   height: 4rem;
 }
 
-.h-3\/5 {
-  height: 60%;
-}
-
 .h-\[250px\] {
   height: 250px;
-}
-
-.h-7\/10 {
-  height: 70%;
-}
-
-.h-\[70\%\] {
-  height: 70%;
-}
-
-.h-\[75px\] {
-  height: 75px;
 }
 
 .h-auto {
@@ -622,28 +606,16 @@ video {
   height: 100%;
 }
 
-.w-4\/5 {
-  width: 80%;
+.w-\[125px\] {
+  width: 125px;
 }
 
 .w-\[250px\] {
   width: 250px;
 }
 
-.w-7\/10 {
-  width: 70%;
-}
-
-.w-\[70\%\] {
-  width: 70%;
-}
-
-.w-\[100px\] {
-  width: 100px;
-}
-
-.w-\[125px\] {
-  width: 125px;
+.origin-bottom {
+  transform-origin: bottom;
 }
 
 @keyframes gradient-xy {
@@ -660,6 +632,42 @@ video {
 
 .animate-gradient-xy {
   animation: gradient-xy 15s ease infinite;
+}
+
+@keyframes screen-fade-out {
+  0% {
+    opacity: 1;
+  }
+
+  25% {
+    opacity: .25;
+  }
+
+  50%, 100% {
+    opacity: 0;
+  }
+}
+
+.animate-screen-fade-out {
+  animation: screen-fade-out 1s forwards;
+}
+
+@keyframes rotate-wobble {
+  0%, 50%, 100% {
+    rotate: 0deg;
+  }
+
+  25% {
+    rotate: 30deg;
+  }
+
+  75% {
+    rotate: -30deg;
+  }
+}
+
+.animate-wobble-motion {
+  animation: rotate-wobble 0.75s ease 4;
 }
 
 .items-center {
@@ -693,17 +701,16 @@ video {
   background-color: rgb(45 212 191 / var(--tw-bg-opacity));
 }
 
-.bg-violet-950 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(46 16 101 / var(--tw-bg-opacity));
-}
-
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
 }
 
 .bg-black-radial-gradient {
-  background-image: radial-gradient(farthest-corner at 10px 40px, #333, #000);
+  background-image: radial-gradient(farthest-corner at 10px 40px, #444, #000);
+}
+
+.bg-gradient-to-br {
+  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
 }
 
 .bg-gradient-to-r {
@@ -716,6 +723,12 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.from-violet-900 {
+  --tw-gradient-from: #4c1d95 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(76 29 149 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
 .via-violet-700 {
   --tw-gradient-to: rgb(109 40 217 / 0)  var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), #6d28d9 var(--tw-gradient-via-position), var(--tw-gradient-to);
@@ -725,16 +738,16 @@ video {
   --tw-gradient-to: #0e7490 var(--tw-gradient-to-position);
 }
 
+.to-gray-950 {
+  --tw-gradient-to: #030712 var(--tw-gradient-to-position);
+}
+
+.to-violet-950 {
+  --tw-gradient-to: #2e1065 var(--tw-gradient-to-position);
+}
+
 .p-4 {
   padding: 1rem;
-}
-
-.p-6 {
-  padding: 1.5rem;
-}
-
-.p-10 {
-  padding: 2.5rem;
 }
 
 .px-2 {
@@ -742,14 +755,14 @@ video {
   padding-right: 0.5rem;
 }
 
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .pt-10 {
@@ -772,68 +785,56 @@ video {
 }
 
 @media (min-width: 330px) {
-  .xs330\:h-xs250 {
-    height: 250px;
-  }
-
   .xs330\:h-\[120px\] {
     height: 120px;
   }
 
-  .xs330\:w-xs250 {
-    width: 250px;
+  .xs330\:h-xs250 {
+    height: 250px;
   }
 
   .xs330\:w-\[150px\] {
     width: 150px;
   }
+
+  .xs330\:w-xs250 {
+    width: 250px;
+  }
 }
 
 @media (min-width: 380px) {
-  .xs380\:h-xs300 {
-    height: 300px;
-  }
-
-  .xs380\:h-\[200px\] {
-    height: 200px;
-  }
-
   .xs380\:h-\[150px\] {
     height: 150px;
   }
 
-  .xs380\:w-xs300 {
-    width: 300px;
+  .xs380\:h-xs300 {
+    height: 300px;
   }
 
   .xs380\:w-\[200px\] {
     width: 200px;
   }
+
+  .xs380\:w-xs300 {
+    width: 300px;
+  }
 }
 
 @media (min-width: 430px) {
-  .xs430\:h-xs350 {
-    height: 350px;
-  }
-
-  .xs430\:h-\[280px\] {
-    height: 280px;
-  }
-
   .xs430\:h-\[150px\] {
     height: 150px;
   }
 
-  .xs430\:w-xs350 {
-    width: 350px;
-  }
-
-  .xs430\:w-\[280px\] {
-    width: 280px;
+  .xs430\:h-xs350 {
+    height: 350px;
   }
 
   .xs430\:w-\[250px\] {
     width: 250px;
+  }
+
+  .xs430\:w-xs350 {
+    width: 350px;
   }
 }
 
@@ -844,14 +845,6 @@ video {
 
   .xs480\:w-3\/5 {
     width: 60%;
-  }
-
-  .xs480\:p-4 {
-    padding: 1rem;
-  }
-
-  .xs480\:p-6 {
-    padding: 1.5rem;
   }
 
   .xs480\:pt-6 {
